# TrackingBox

./: .gitignore  LICENSE  Makefile  README.md  config.example.json  pyproject.toml  requirements-ml.txt  requirements.txt
deploy/: modal_app.py
docs/: WINDOWS_TOUCHDESIGNER.md  architecture.md  floor_projection.md  modal.md  touchdesigner.md  zones.md
scripts/: calibrate_floor.py  calibrate_lens.py  calibration_common.py  generate_checkerboard.py  install_windows.bat  install_windows.ps1  run_windows.bat
src/audience_tracker/: __init__.py  base.py  benchmark.py  cli.py  config.py  detection.py  diagnostics.py  factory.py  framelog.py  identity.py  metrics.py  models.py  overlay.py  pipeline.py  projection.py  reid.py  simulator.py  statestore.py  tracking.py  vecmath.py  zones.py
src/audience_tracker/api/: __init__.py  app.py
src/audience_tracker/ingestion/: __init__.py  capture_agent.py  frame_source.py  packet.py  server.py
td_scripts/: README.md  td_fetch_zone_counts.py  td_launch_tracker.py  td_receive_state.py  td_send_frames.py
tests/: test_api.py  test_calibration_scripts.py  test_config_env.py  test_diagnostics.py  test_frame_queue.py  test_frame_source_pipeline.py  test_frame_source_retry.py  test_identity_manager.py  test_ingest_api.py  test_packet.py  test_pipeline_mock.py  test_pipeline_projection.py  test_projection.py  test_reid_optional.py  test_state_store.py  test_zones.py
